# fast-realworld-app

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
conf/: default.toml  development.toml  production.toml
migrations/: README
migrations/2019-03-06-144033_create_users/: up.sql
migrations/2019-03-06-144624_create_followers/: up.sql
migrations/2019-03-06-145146_create_articles/: up.sql
migrations/2019-03-06-152302_create_comments/: up.sql
migrations/2019-03-06-152831_create_article_tags/: up.sql
src/: error.rs  lib.rs  util.rs
src/app/: config.rs  mod.rs
src/app/commands/: mod.rs  serve.rs
src/auth/: jwt.rs  mod.rs  pass.rs
src/db/: article.rs  comment.rs  mod.rs  service.rs  tag.rs  user.rs  util.rs
src/forms/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
src/middleware/: auth.rs
src/models/: article.rs  comment.rs  mod.rs  tag.rs  user.rs
src/services/: article.rs  mod.rs  profile.rs  tag.rs  user.rs
