[package]
name = "fast-realworld"
version = "0.1.0"
authors = ["Robert G. Jakabosky <rjakabosky@neoawareness.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.5"
dotenv = "0.15"

thiserror = "1.0"
anyhow = "1.0"

num_cpus = "1.0"

futures = "0.3"
async-std = "1.6"

crossbeam-channel = "0.4"

config = "0.10.1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }

lazy_static = "1.4.0"

libreauth = "0.11.0"
jsonwebtoken = "7.1.0"

iso8601 = "0.4"
chrono = { version = "0.4", features = ["serde"] }

actix = { version="0.9.0", features=["http"] }
actix-rt = "1.1.1"
actix-web = { version="3.0.0-alpha.3" }
actix-files = { version="0.3.0-alpha.1" }
actix-cors = { version="0.3.0-alpha.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = "0.2.21"
postgres-types = { version = "0.1", features = ["derive"] }
postgres-protocol = { version = "0.5" }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }

