[package]
name = "fast-realworld"
version = "0.1.0"
authors = ["Robert G. Jakabosky <rjakabosky@neoawareness.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"

thiserror = "1"
anyhow = "1"

num_cpus = "1"

futures = "0.3"
async-std = "1.7"

crossbeam-channel = "0.5"

config = "0.10"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }

lazy_static = "1.4"

libreauth = "0.13"
jsonwebtoken = "7.2"

iso8601 = "0.4"
chrono = { version = "0.4", features = ["serde"] }

slug = "0.1"

actix-rt = "1"
actix-web = { version="3" }
actix-files = { version="0.4" }
actix-cors = { version="0.5" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = "0.2"

postgres-types = { version = "0.1", features = ["derive"] }
postgres-protocol = { version = "0.5" }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }

